# graphrag-api

./: .gitignore  LICENSE  README.md  environ.toml.example  pyproject.toml
src/graphrag_api/: __init__.py  __main__.py  api.py
tests/: get_basic_search.sh  get_drift_search.sh  get_global_search.sh  get_local_search.sh  post_basic_search.sh  post_drift_search.sh  post_global_search.sh  post_local_search.sh
